buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}
plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}
apply plugin: 'org.spongepowered.mixin'

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            // args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')

            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}


repositories {
    maven {
        name "JEI"
        url "https://dvs1.progwml6.com/files/maven"
    }

    maven {
        url "https://cursemaven.com"
    }
    maven {
        name "ModMaven"
        url "https://modmaven.dev"
    }
    maven {
            name = "Modrinth Maven"
            url = "https://api.modrinth.com/maven"
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    implementation fg.deobf("curse.maven:patchouli-306770:6164575")
    implementation fg.deobf("curse.maven:apotheotic-additions-924640:6393313")
    compileOnly fg.deobf("curse.maven:esoteric-reforging-forge-1150370:5989440")
    compileOnly fg.deobf("curse.maven:ancient-reforging-985468:5527109")

    runtimeOnly fg.deobf("curse.maven:esoteric-reforging-forge-1150370:5989440")
    runtimeOnly fg.deobf("curse.maven:ancient-reforging-985468:5527109")
  // implementation fg.deobf("curse.maven:enchantlevelbrek-1110220:6802037")
    implementation fg.deobf("curse.maven:nbtedit-reborn-678133:5984630")
    implementation fg.deobf("curse.maven:apothic-attributes-898963:5634071")
    implementation fg.deobf("curse.maven:placebo-283644:6274231")
    implementation fg.deobf("curse.maven:apotheosis-313970:6461960")
    implementation fg.deobf("curse.maven:spark-361579:4738952")
    implementation fg.deobf("curse.maven:appleskin-248787:4770828")
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
    runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
    runtimeOnly fg.deobf("curse.maven:jade-324717:5672013")
    implementation fg.deobf("curse.maven:embeddium-908741:5681725")
    implementation fg.deobf("curse.maven:powerful-dummy-1276893:6956104")
    implementation fg.deobf("curse.maven:apotheosis-modern-ragnarok-966582:7281314")
    implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:7401617")
    implementation fg.deobf("curse.maven:get-it-together-drops-411045:4578649")
    implementation fg.deobf("curse.maven:cloth-config-348521:5729105")
//    implementation fg.deobf("maven.modrinth:manaitamtk:1.7.1")
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.3"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.3")) {
        jarJar.ranged(it, "[0.5.3,)")
    }
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}
mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}
tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1', // We are version 1 of ourselves
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
